add update blog request in api
